WebView Camera issue updated & Logo added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">EliteFit.AI WebView</string>
+    <string name="app_name">EliteFit WebView</string>
+    <string name="elitefit">EliteFit</string>
 </resources>
